--- a/kerlig/kerlig.entitlements
+++ b/kerlig/kerlig.entitlements
@@ -3,9 +3,20 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<false/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
+	<key>com.apple.security.files.home-relative-path.read-only</key>
+	<array>
+		<string>/Library/Application Support/Cursor/</string>
+		<string>/Library/Application Support/Code/</string>
+	</array>
 	<key>com.apple.security.temporary-exception.apple-events</key>
 	<true/>
 	<key>com.apple.security.automation.apple-events</key>
@@ -20,5 +31,6 @@
 	<array>
 		<string>group.com.yourcompany.textcapture</string>
 	</array>
+	
 </dict>
 </plist>
