--- a/kerlig/Info.plist
+++ b/kerlig/Info.plist
@@ -39,12 +39,22 @@
 	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2025 Your Company. All rights reserved.</string>
-	<key>CFBundleIconFile</key>
-	<string>AppIcon</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+
+	<key>CFBundleIcons</key>
+<dict>
+    <key>CFBundlePrimaryIcon</key>
+    <dict>
+        <key>CFBundleIconFiles</key>
+        <array>
+            <string>AppIcon</string>
+        </array>
+    </dict>
+</dict>
+	
 </dict>
 </plist>
